--- a/.env-example
+++ b/.env-example
@@ -1,1 +1,4 @@
-SECRET_KEY=your_secret_key
+SECRET_KEY=YOUR_SECRET_KEY
+SQLALCHEMY_DATABASE_URI=mysql+mysqlconnector://username:password@localhost/table_name
+SENDER_EMAIL=SENDER_EMAIL
+SENDER_PASSWORD=SENDER_PASSWORD
