--- a/.env-example
+++ b/.env-example
@@ -1,4 +1,5 @@
 SECRET_KEY=YOUR_SECRET_KEY
 SQLALCHEMY_DATABASE_URI=mysql+mysqlconnector://username:password@localhost/table_name
+SQLALCHEMY_DATABASE_PASSWORD=PASSWORD
 SENDER_EMAIL=SENDER_EMAIL
 SENDER_PASSWORD=SENDER_PASSWORD
