--- a/.env-example
+++ b/.env-example
@@ -1,5 +1,9 @@
 SECRET_KEY=YOUR_SECRET_KEY
 SQLALCHEMY_DATABASE_URI=mysql+mysqlconnector://username:password@localhost/table_name
 SQLALCHEMY_DATABASE_PASSWORD=PASSWORD
+
 SENDER_EMAIL=SENDER_EMAIL
 SENDER_PASSWORD=SENDER_PASSWORD
+
+RABBITMQ_DEFAULT_USER=RABBITMQ_DEFAULT_USER
+RABBITMQ_DEFAULT_PASS=RABBITMQ_DEFAULT_PASS
